--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -7,7 +7,7 @@
 	xmlns:f="http://java.sun.com/jsf/core">
 <f:view>
 	<h:head>
-	  <META HTTP-EQUIV="refresh" CONTENT="0;URL=/web/index.html"></META>
+	  <META HTTP-EQUIV="refresh" CONTENT="0;URL=/resources-management/web/index.html"></META>
 	  
 	</h:head>
 
