--- a/src/main/webapp/web/index.xhtml
+++ b/src/main/webapp/web/index.xhtml
@@ -121,7 +121,7 @@
         <script type="text/javascript" src="scripts/components/exoUsers/users.service.js"></script>
 
         <script type="text/javascript" src="scripts/app/statistique/stat.controller.js"></script>
-        <script type="text/javascript" src="scripts/app/statistique/stat.js"></script>
+        <script language="javascript" type="text/javascript" src="scripts/app/statistique/stat.js"></script>
 
         <!-- endbuild -->
 </body>
